--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "Surch",
   "version": "0.0.1",
   "description": "Simply search your photos, contacts, places, and links.",
+  "author":"advatar"
   "repository": {
     "title": "Simple Search",
     "type": "app",
-    "github": "https://github.com/advatar/surch",
+    "github": "https://github.com/advatar/locker-surch",
+    "url": "https://github.com/advatar/locker-surch",
     "static": true,
     "handle": "surch",
     "uses": {
